Option to disable music track title in QS tile [2/2]
Change-Id: I144b64457b2c0cdaabc2f1b8bdbd3d8aec076257

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -449,4 +449,8 @@
     <!-- Disable quick settings on lock screen switch -->
     <string name="lockscreen_qs_disabled_title">Quick settings disabled on lock screen</string>
     <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings and keyguard shortcuts on secure lock screens</string>
+
+    <!-- Disable music track title in QS tile -->
+    <string name="qs_music_tile_track_optional_title">Music tile track title</string>
+    <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 </resources>
