AE: SystemUI: QS tile titles visibility
  * See FWB part for description

Change-Id: I59f0bc2e5629ef163a1de053cd4cffdfe3387e16

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -710,11 +710,16 @@
     <string name="block_on_secure_keyguard_title">Disable quick settings on lockscreen</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings in the keyguard for a secure lock only</string>
 
+
     <!-- QS shade transparency -->
     <string name="qs_transparent_shade">QS shade transparency</string>
 
     <!-- QS header transparency -->
     <string name="qs_transparent_header">QS header transparency</string>
+
+    <!-- QS tile labels visibility -->
+    <string name="qs_menu_item_titles">Hide QS tile labels</string>
+    <string name="qs_menu_item_titles_summary">Quick tile labels in notification drawer will be hidden if true</string>
 
     <!-- Volume dialog transparency -->
     <string name="volume_dialog_transparency">Volume dialog transparency</string>
