--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,4 +1,23 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+/**
+ * Copyright (C) 2015-2016 AICP
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
     <!-- <string name="app_name" translatable="false">Aicp Extras</string> -->
 
     <string name="navigation_drawer_open">Öffne Navigationsbereich</string>
@@ -715,6 +734,10 @@
 
     <!-- QS header transparency -->
     <string name="qs_transparent_header">Transparenz</string>
+
+    <!-- QS tile labels visibility -->
+    <string name="qs_menu_item_titles">Verstecke Kachel-Bezeichnungen</string>
+    <string name="qs_menu_item_titles_summary">Wenn aktiviert, werden die Bezeichnungen unter den Kacheln nicht angezeigt.</string>
 
     <!-- Volume dialog transparency -->
     <string name="volume_dialog_transparency">Transparenz</string>
