--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -46,7 +46,7 @@
     <string name="statubar_title">Statusleiste</string>
     <string name="lockscreen_title">Sperrbildschirm</string>
     <string name="systemui_tuner_title">SystemUI Tuner</string>
-    <string name="systemui_tuner_summary">Marshmallow übernimmt das Tuning der SystemUI</string>
+    <string name="systemui_tuner_summary">Android übernimmt das Tuning der SystemUI</string>
     <string name="systemui_tuner_dilog_title">Achtung</string>
     <string name="systemui_tuner_dilog_warning">Der Tuner bietet begrenzte SystemUI Modifikationen. Eine Verknüpfung hierfür wurde zu AICP Extras hinzugefügt.\nHier können auch neue Kacheln hinzugefügt werden.</string>
     <string name="aicp_downloads_title">Downloads</string>
@@ -63,8 +63,8 @@
     <string name="nothing_title">Hier gibt es noch nichts zu sehen, also weiter.</string>
 
     <!-- Switch On/Off  -->
-    <string name="switch_on_text">An</string>
-    <string name="switch_off_text">Aus</string>
+    <string name="switch_on_text">AN</string>
+    <string name="switch_off_text">AUS</string>
 
     <!-- Permissions -->
     <string name="storage_permission_granted">Zugriff gestattet. Du kannst jetzt auf den Speicher zugreifen.</string>
@@ -402,7 +402,7 @@
    <string name="lockscreen_wallpaper_title">Sperrbildschirm-Hintergrund</string>
    <string name="lockscreen_wallpaper_set_title">Setze neues Hintergrundbild</string>
    <string name="lockscreen_wallpaper_set_summary">Ein Neustart ist eventuell erforderlich</string>
-   <string name="lockscreen_wallpaper_clear_title">Standard wieder herstellen</string>
+   <string name="lockscreen_wallpaper_clear_title">Standard wiederherstellen</string>
    <string name="reset_lockscreen_wallpaper">Sperrbildschirm-Hintergrund zurückgesetzt</string>
 
     <!-- OmniSwitch -->
@@ -736,8 +736,8 @@
     <string name="qs_transparent_header">Transparenz</string>
 
     <!-- QS tile labels visibility -->
-    <string name="qs_menu_item_titles">Verstecke Kachel-Bezeichnungen</string>
-    <string name="qs_menu_item_titles_summary">Wenn aktiviert, werden die Bezeichnungen unter den Kacheln nicht angezeigt.</string>
+    <string name="qs_menu_item_titles">Kachel-Bezeichnungen</string>
+    <string name="qs_menu_item_titles_summary">Wenn deaktiviert, werden die Bezeichnungen unter den Kacheln nicht angezeigt.</string>
 
     <!-- Volume dialog transparency -->
     <string name="volume_dialog_transparency">Transparenz</string>
@@ -934,7 +934,7 @@
     <string name="ae_custom_colors_summaries">Benutze die unteren Einstellungen, um das Aussehen von AE zu verändern</string>
     <string name="ae_drawer_opacity_title">Deckkraft des Navigationsmenüs</string>
     <string name="ae_drawer_bg_color_title">Hintergundfarbe des Navigationsmenüs</string>
-    <string name="ae_settings_restore_defaults_title">Standard wieder herstellen</string>
+    <string name="ae_settings_restore_defaults_title">Standard wiederherstellen</string>
     <string name="values_restored_title">Werte wiederhergestellt</string>
     <string name="ae_header_bg_image_opacity_title">Deckkraft des Hintergrundbildes im Navigationsmenü</string>
     <string name="ae_nav_drawer_checked_text_title">Textfarbe der Auswahl</string>
@@ -1011,7 +1011,7 @@
 
     <!-- Statusbar 4G LTE switch -->
     <string name="show_fourg_title">Zeige 4G an Stelle von LTE</string>
-    <string name="show_fourg_summary">Ersetzt den LTE Indiktor in der Statusleiste durch 4G</string>
+    <string name="show_fourg_summary">Ersetzt den LTE Indikator in der Statusleiste durch 4G</string>
 
     <!-- Zen icon in statusbar -->
     <string name="show_zen_icon_title">\"Nicht stören\"-Symbol</string>
