[WIP] Round icon settings [2/2]
Change-Id: Idf192cf7854dcd7ef40c7e3a571c71ef556ad0c9

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1085,4 +1085,7 @@
     <string name="lock_screen_hide_ampm_summary_on">AM/PM hidden</string>
     <string name="lock_screen_hide_ampm_summary_off">AM/PM shown</string>
 
+    <!-- Prefer round icons -->
+    <string name="prefer_round_icons_title">Round icons</string>
+    <string name="prefer_round_icons_summary">Prefer round icons when possible</string>
 </resources>
