Add three-fingers-swipe to screenshot [1/2]
Change-Id: I3c014bdab93274dee616f4144a14ed7922cf6fde

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -582,4 +582,8 @@
     <string name="bluetooth_battery_title">Show Bluetooth battery status</string>
     <string name="bluetooth_battery_summary">Show battery status for the currently connected bluetooth device, if availible.</string>
 
+     <!-- Three-fingers-swipe to screenshot -->
+     <string name="three_finger_gesture">Swipe to screenshot</string>
+     <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
+
 </resources>
