--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -27,12 +27,12 @@
     <string name="first_layout_title">骂人。</string>
     <string name="second_layout_title">第二个布局</string>
     <string name="third_layout_title">第三个布局</string>
-    <string name="aicp_extras_title">AICP 设置</string>
+    <string name="aicp_extras_title">AICP设置</string>
     <string name="pun_title">管理自己的ROM</string>
     <string name="various_shit_title">其他设置</string>
     <string name="about_title">关于</string>
     <string name="other_title">其他</string>
-    <string name="g_community">G+社区 (汉化作者</string>
+    <string name="g_community">G+社区</string>
     <string name="ui_title">界面</string>
     <string name="builtin_title">内置</string>
     <string name="addons_title">扩展</string>
@@ -52,7 +52,7 @@
     <string name="aicp_gerrit_title">代码审查</string>
     <string name="send_mail_intent">发送邮件...</string>
     <string name="hidden_anim_activity_title">休息时间!!!</string>
-    <string name="hidden_anim_more_title">更多?</string>
+    <string name="hidden_anim_more_title">更多</string>
     <string name="hidden_anim_more_nice">漂亮</string>
     <string name="continue_title">继续</string>
     <string name="nothing_title">没有标题</string>
