--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -24,7 +24,7 @@
     <string name="navigation_drawer_open">打开导航抽屉</string>
     <string name="navigation_drawer_close">关闭导航抽屉</string>
     <string name="action_settings">设置</string>
-    <string name="first_layout_title">骂人。</string>
+    <string name="first_layout_title">第一个布局</string>
     <string name="second_layout_title">第二个布局</string>
     <string name="third_layout_title">第三个布局</string>
     <string name="aicp_extras_title">AICP 设置</string>
@@ -32,7 +32,7 @@
     <string name="various_shit_title">其他设置</string>
     <string name="about_title">关于</string>
     <string name="other_title">其他</string>
-    <string name="g_community">G+社区 (汉化作者</string>
+    <string name="g_community">G+社区 (汉化作者：huaweic8500fan)</string>
     <string name="ui_title">界面</string>
     <string name="builtin_title">内置</string>
     <string name="addons_title">扩展</string>
@@ -45,14 +45,14 @@
     <string name="statubar_title">状态栏</string>
     <string name="lockscreen_title">锁屏</string>
     <string name="systemui_tuner_title">系统界面调谐器</string>
-    <string name="systemui_tuner_summary">棉花糖系统界面调整</string>
+    <string name="systemui_tuner_summary">牛轧糖系统界面调整</string>
     <string name="systemui_tuner_dilog_title">注意</string>
     <string name="systemui_tuner_dilog_warning">“调谐器提供有限的系统界面修改。为了方便访问特将此选项加入到 AICP 设置。 在这里你可以添加或隐藏新图块。”</string>
     <string name="aicp_downloads_title">下载地址</string>
     <string name="aicp_gerrit_title">代码审查</string>
     <string name="send_mail_intent">发送邮件...</string>
     <string name="hidden_anim_activity_title">休息时间!!!</string>
-    <string name="hidden_anim_more_title">更多?</string>
+    <string name="hidden_anim_more_title">更多</string>
     <string name="hidden_anim_more_nice">漂亮</string>
     <string name="continue_title">继续</string>
     <string name="nothing_title">没有标题</string>
@@ -115,8 +115,8 @@
     <string name="show_network_traffic_up">显示上传速度</string>
     <string name="show_network_traffic_down">显示下载速度</string>
     <string name="show_network_traffic_all">显示上传和下载速度</string>
-    <string name="show_network_traffic_bit">bit/每秒 (kb)</string>
-    <string name="show_network_traffic_byte">byte/每秒 (KB)</string>
+    <string name="show_network_traffic_bit">比特每秒 (kb)</string>
+    <string name="show_network_traffic_byte">字节每秒 (KB)</string>
     <string name="show_network_traffic_500">500毫秒</string>
     <string name="show_network_traffic_1000">1000毫秒</string>
     <string name="show_network_traffic_1500">1500毫秒</string>
