AE: Round icon settings [2/2]
Change-Id: Idf192cf7854dcd7ef40c7e3a571c71ef556ad0c9

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -457,4 +457,8 @@
     <!-- Disable music track title in QS tile -->
     <string name="qs_music_tile_track_optional_title">Music tile track title</string>
     <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
+
+    <!-- Prefer round icons -->
+    <string name="prefer_round_icons_title">Round icons</string>
+    <string name="prefer_round_icons_summary">Prefer round icons when possible</string>
 </resources>
