--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="hidden_anim_more_nice">NICE</string>
     <string name="continue_title">Continue</string>
     <string name="settings_activity_title">AE settings</string>
+    <string name="recents_panel_title">Recents panel</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
@@ -382,6 +383,8 @@
     <string name="qs">Quick Settings Tweaks</string>
     <string name="vol_diag">Volume Dialog Tweaks</string>
     <string name="power">Power Menu Tweaks</string>
+    <string name="cab">Clear All Button Tweaks</string>
+    <string name="visuals">Recents Extra Visuals</string>
 
     <!-- Fingerprint authentication vibration -->
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
