Add membar to recents options [2/2]
AICPfy CheckBox -> Switch

Change-Id: I68c7252fd542be4b681eb1c54e25be978b03db09

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -462,11 +462,16 @@
     <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 
     <!-- Immersive Recents -->
-  <string name="immersive_recents_title">Immersive Recents</string>
+    <string name="immersive_recents_title">Immersive Recents</string>
     <string name="immersive_recents_summary">Change the view of the recents screen</string>
     <string name="immersive_recents_dialog_title">Select recents view</string>
     <string name="immersive_recents_default">Default</string>
     <string name="immersive_recents_fullscreen">Fullscreen</string>
     <string name="immersive_recents_statusbar">Statusbar only</string>
     <string name="immersive_recents_navbar">Navbar only</string>
+
+    <!-- Recents Membar -->
+    <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
+    <string name="systemui_recents_mem_display_summary">Enable/Disable the RAM bar in Recents.</string>
+
 </resources>
