AE: Add a HeadsUp customization fragment and switch
Thanks to @beanstown106 for bringing up to N

Change-Id: I5bc2c7f567f035e8f894852444cf3e4c3cea361d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -486,4 +486,12 @@
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
 
+    <!-- Heads up settings -->
+    <string name="nav_headsup_title">Peeking notifications</string>
+    <string name="headsup_settings_category">Peeking notifications</string>
+    <string name="headsup_settings_title">Enable Peeking notifications</string>
+    <string name="headsup_settings_summary">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
+    <string name="summary_heads_up_enabled">Peeking notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Peeking notifications are disabled</string>
+    <string name="heads_up_disabled_notice">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
 </resources>
