--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -457,4 +457,13 @@
     <!-- Disable music track title in QS tile -->
     <string name="qs_music_tile_track_optional_title">Music tile track title</string>
     <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
+
+    <!-- Heads up settings -->
+    <string name="nav_headsup_title">Peeking notifications</string>
+    <string name="headsup_settings_category">Peeking notifications</string>
+    <string name="headsup_settings_title">Enable Peeking notifications</string>
+    <string name="headsup_settings_summary">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
+    <string name="summary_heads_up_enabled">Peeking notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Peeking notifications are disabled</string>
+    <string name="heads_up_disabled_notice">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
 </resources>
