--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -154,6 +154,11 @@
     <string name="battery_bar_style_regular">Regular</string>
     <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
     <string name="battery_bar_style_reversed">Reversed</string>
+    <string name="battery_bar_blend_color_title">Blend colors</string>
+    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
+    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
+    <string name="battery_bar_blend_color_reverse_summary_on">Current cycle direction: red &#8594; green &#8594; blue &#8594; red</string>
+    <string name="battery_bar_blend_color_reverse_summary_off">Current cycle direction: red &#8592; green &#8592; blue &#8592; red</string>
 
     <!-- Activity and App Picker -->
     <string name="picker_activities">Activities</string>
