Battery bar: possibility to blend colors between full/empty [2/2]
- Blend colors using the HSV color model
- Also add a setting for reversing the blend direction (HSV has a circular color spectre)

Change-Id: Ied8ce45cfba229dcb796b8f58130dde2cb41b010

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -154,6 +154,12 @@
     <string name="battery_bar_style_regular">Regular</string>
     <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
     <string name="battery_bar_style_reversed">Reversed</string>
+    <string name="battery_bar_blend_color_title">Blend colors</string>
+    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
+    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
+    <!--string name="battery_bar_blend_color_reverse_summary">Cycle through the HSV-color model in reversed direction. Toggle if you\'re unhappy with the colors \"in between\"</string-->
+    <string name="battery_bar_blend_color_reverse_summary_on">Current cycle direction: red &#8594; green &#8594; blue &#8594; red</string>
+    <string name="battery_bar_blend_color_reverse_summary_off">Current cycle direction: red &#8592; green &#8592; blue &#8592; red</string>
 
     <!-- Activity and App Picker -->
     <string name="picker_activities">Activities</string>
