--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,8 +301,9 @@
     <string name="qs_transparent_header">QS header transparency</string>
 
     <!-- QS tile labels visibility -->
-    <string name="qs_menu_item_titles">Hide QS tile labels</string>
-    <string name="qs_menu_item_titles_summary">Quick tile labels in notification drawer will be hidden if true</string>
+    <string name="qs_menu_item_titles">QS tile labels</string>
+    <string name="qs_menu_item_titles_summaryOn">Labels are shown</string>
+    <string name="qs_menu_item_titles_summaryOff">Labels are hidden</string>
 
     <!-- Volume dialog transparency -->
     <string name="volume_dialog_transparency">Volume dialog transparency</string>
