Battery Saver Easy Toggle [2/2]
Change-Id: Ic3b9723abf99ff8f603db1b8b5d4ba1af8c5cc87
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -520,4 +520,12 @@
     <string name="heads_up_snooze_10min">10 minutes</string>
     <string name="heads_up_snooze_15min">15 minutes</string>
     <string name="heads_up_snooze_20min">20 minutes</string>
+
+    <!-- Lockscreen charging current indicator  -->
+    <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
+    <string name="lockscreen_charging_current_summary">Display negociated charger max current and voltage on lockscreen</string>
+
+    <!-- Battery Saver easy toggle -->
+    <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
+    <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
 </resources>
