--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -395,6 +395,7 @@
     <string name="ae_custom_colors_title">Custom colors</string>
     <string name="ae_custom_colors_summaries">Use the settings below to modify the AE appearance</string>
     <string name="ae_drawer_opacity_title">Navigation drawer opacity</string>
+    <string name="ae_header_bg_image_color_title">Navigation header bg image color</string>
     <string name="ae_drawer_bg_color_title">Navigation drawer bg color</string>
     <string name="ae_settings_restore_defaults_title">Restore defaults</string>
     <string name="values_restored_title">Values restored</string>
