MediaScanner behavior on boot [3/3]
Conflicts: They happened after OmniSwitch merge. Solved.
	res/values/strings.xml

Change-Id: I6e0af70894207e281e4e3838411928b077fc26a7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -539,4 +539,9 @@
     <string name="omniswitch_first_time_title">Warning</string>
     <string name="omniswitch_first_time_message">If using OmniSwitch as recents alterative, make sure you have OmniSwitch enabled</string>
 
+    <!-- MediaScanner behavior on boot -->
+    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
+    <string name="media_scanner_on_boot_enabled">Scan media</string>
+    <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
+    <string name="media_scanner_on_boot_disabled">Do not scan media</string>
 </resources>
