AE: updated de-translations for OmniSwitch, etc.
Change-Id: I5e7aac1114d711154421e088fb1bbadb91180bc1
Signed-off-by: Ralf Luther <luther.ralf@gmail.com>

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -520,4 +520,29 @@
     <string name="heads_up_snooze_10min">10 Minuten</string>
     <string name="heads_up_snooze_15min">15 Minuten</string>
     <string name="heads_up_snooze_20min">20 Minuten</string>
+
+    <!-- Lockscreen battery info indicator  -->
+    <string name="lockscreen_battery_info_title">Auflade-Infos auf dem Sperrbildschirm</string>
+    <string name="lockscreen_battery_info_summary">Zeigt auf dem Sperrbildschirm den momentanen Ladestrom (in Volt) and die Akku-Temperatur während des Aufladens an</string>
+
+    <!-- Battery Saver easy toggle -->
+    <string name="qs_battery_easy_toggle_title">Schnelleinstellung per Akku-Kachel</string>
+    <string name="qs_battery_easy_toggle_summary">Wenn aktiviert, schaltet der Tastendruck auf die Kachel den Energiesparmodus direkt ein oder aus und führt nicht in die Einstellungen</string>
+
+    <!-- OmniSwitch Recents -->
+    <string name="aosp_recents_title">AICP Verlauf</string>
+    <string name="omniswitch_recents_title">OmniSwitch Verlauf</string>
+    <string name="recents_use_omniswitch_title">Als Anwendungsverlauf verwenden</string>
+    <string name="recents_use_omniswitch_summary">Benutze OmniSwitch anstatt der Standardansicht für den Anwendungsverlauf</string>
+    <string name="omniswitch_start_settings_title">Einstellungen</string>
+    <string name="omniswitch_start_settings_summary">Öffnet die Einstellungen von OmniSwitch</string>
+    <string name="omniswitch_first_time_title">Warnung</string>
+    <string name="omniswitch_first_time_message">Stellen Sie sicher, dass OmniSwitch aktiviert ist. Sie müssen dies in den \"Einstellungen\" von Omniswitch tun</string>
+
+    <!-- MediaScanner behavior on boot -->
+    <string name="media_scanner_on_boot_title">Verhalten des MediaScanners beim Start</string>
+    <string name="media_scanner_on_boot_enabled">Nach Mediendateien suchen</string>
+    <string name="media_scanner_on_boot_ask">Nachfragen (Benachrichtigung)</string>
+    <string name="media_scanner_on_boot_disabled">Nicht nach Mediendateien suchen</string>
+
 </resources>
